[package]
name = "entropy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flume = "0.10.14"
mc_serializer = { git = "https://github.com/MCEntropy/MCProtocol.rs", branch = "master", version = "0.1.0" }
